Mon Jul  2 03:09:36 2007  Koichi Sasada  <ko1@atdot.net>

	* yarvcore.h, compile.c, insnhelper.ci, iseq.c, vm.c:
	  rename structure names and field names.

	* insnhelper.h, insns.def: add GET_CONST_INLINE_CACHE().

	* iseq.c: add rb_iseq_build_for_ruby2cext().

	* yarvcore.h, vm.h: move declaration of rb_insn_func_t
	  to yarvcore.h.

Sun Jul  1 03:25:53 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.h, vm.h: some refactoring.
	  remove useless comments, etc.

Sun Jul  1 03:02:29 2007  Koichi Sasada  <ko1@atdot.net>

	* yarvcore.h: some refactoring on rb_iseq_t.
	  rename some variable names, add comments, etc.

	* compile.c, iseq.c, proc.c, vm.c: ditto.

Sun Jul  1 02:57:57 2007  Koichi Sasada  <ko1@atdot.net>

	* vm.h: rename insn_func_type to rb_insn_func_type.

	* vm_evalbody.ci: ditt.

	* insns.def: add opt_call_native_compiled instruction
	  instead of opt_call_native_compiled.

Sat Jun 30 00:17:00 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): return non-valid token for an invalid
	  instance/class variable name.  a patch from from Yusuke ENDOH
	  <mame AT tsg.ne.jp>.  [ruby-dev:31095]

Fri Jun 29 23:38:06 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stmts): fix for ripper.

Fri Jun 29 21:55:48 2007  Koichi Sasada  <ko1@atdot.net>

	* parse.y: fix to show line number of blank block.
	  [ruby-dev:31093]

Fri Jun 29 20:51:04 2007  Tanaka Akira  <akr@fsij.org>

	* lib/cgi/session.rb (create_new_id): don't cut off md5.hexdigest to
	  follow Ruby 1.8.

Fri Jun 29 17:10:14 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* debug.h: constified.

	* debug.c (ruby_set_debug_option): separated from main.c.

	* gc.c (ruby_gc_stress), signal.c (ruby_enable_coredump): prefixed.

Fri Jun 29 16:39:06 2007  Koichi Sasada  <ko1@atdot.net>

	* proc.c (proc_new): fix to return a proc object
	  which block is contained ([ruby-dev:31056]).

Fri Jun 29 15:43:59 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
